--- a/os.in
+++ b/os.in
@@ -63538,12 +63538,17 @@
 
 
 :kernel
-jmp shell
+    jmp shell
 
 :shell
-store #0, "  ____         ____   _                    _         ___   ____\n / ___|  ___  / ___| (_) _ __ ___   _ __  | |  ___  / _ \\ / ___|\n| |  _  / _ \\ \\___ \\ | || '_ ` _ \\ | '_ \\ | | / _ \\| | | |\\___ \\\n| |_| || (_) | ___) || || | | | | || |_) || ||  __/| |_| | ___) |\n \\____| \\___/ |____/ |_||_| |_| |_|| .__/ |_| \\___| \\___/ |____/\n                                   |_|"
-print_str #0
+    store #0, "  ____         ____   _                    _         ___   ____\n / ___|  ___  / ___| (_) _ __ ___   _ __  | |  ___  / _ \\ / ___|\n| |  _  / _ \\ \\___ \\ | || '_ ` _ \\ | '_ \\ | | / _ \\| | | |\\___ \\\n| |_| || (_) | ___) || || | | | | || |_) || ||  __/| |_| | ___) |\n \\____| \\___/ |____/ |_||_| |_| |_|| .__/ |_| \\___| \\___/ |____/\n                                   |_|\n"
+    print_str #0
 
 :shell_loop
-exit
-jmp shell_loop
+    store #0, ">"
+    print_str #0
+    int 0x01
+    # int 0x02
+    print_str #0
+
+    jmp shell_loop
